Changed color scheme of website, fixed white space bug and made contact responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Satisfy&display=swap');
 
+.body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x:hidden; 
+}
 
 #navbar-styling{
     height: 100px;
     padding: 5px;
-    background-color: #844d36;
+    background-color: #64485c;
 }
 
 .navbar-item{
@@ -46,6 +54,7 @@
     font-weight: 600;
     background-color:rgba(76, 66, 66, 0.5);
     border: black solid 4px;
+    border-radius: 6px;
     
     }
 #logo{
@@ -55,7 +64,7 @@
     padding-left: 5px;
     
     position:absolute;
-    margin-left: 0;
+    margin-left: 5px;
 }
 
 body{
@@ -63,26 +72,35 @@ body{
 }
 
 #products-first-div{
-    background-color: #86B3D1;
+    background-color: #adadad;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 18px;
 }
 
 #products-second-div{
-    background-color: #AAA0A0;
+    background-color: #83677b;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 #products-third-div{
-    background-color: #8e8268;
+    background-color: #ADADAD;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 #products-fourth-div{
-    background-color: #fafafa;
+    background-color: #83677b;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .about-us{
     
     padding-bottom: 40px;
     padding-top: 40px;
-    background-color: #AAA0A0;
+    background-color: #83677b;
 }
 
 .about-us h2,p{
@@ -109,7 +127,7 @@ body{
 }
 
 .quotes-color{
-    background-color: #86B3D1;
+    background-color: #ADADAD;
     padding-top:50px;
 }
 
@@ -127,7 +145,7 @@ body{
 .footer-text{
     text-align: center;
     padding-top: 40px;
-    background-color: #844d36;
+    background-color: #64485c;
     color: #fafafa;
 }
 
@@ -141,11 +159,21 @@ body{
     text-decoration: none;
 }
 
+#quotes-hr{
+    margin-left: 45%;
+    background-color: #fafafa;
+    width: 10%;
+    height: 6px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    
+}
+
 .footer-form{
     text-align: center;
     padding-top: 20px;
     padding-bottom: 50px;
-    background-color: #844d36;
+    background-color: #64485c;
 }
 .footer-form input{
     background-color: #fafafa;
@@ -166,9 +194,7 @@ body{
 #current-link{
     text-decoration: #fafafa underline;
 }
-.nav-item:hover{
-    text-decoration:underline blue;
-}
+
  a{
     color: #fafafa;
 }
@@ -207,6 +233,10 @@ hr{
     word-spacing: 3vw;
 }
 
+body{
+    color: #fafafa;
+}
+
 .products-button{
     margin-bottom: 15px;
     margin-top: 10px;
@@ -214,6 +244,7 @@ hr{
     background-color:#fafafa;
     border: solid black 2px;
     border-radius: 10px;
+    
 }
 
 .hero-section{
@@ -289,6 +320,7 @@ background-color: black;
      background-color: #AAA0A0;
      background-image: url("/assets/images/workshop.jpg") ;
      background-size: cover;
+     overflow: hidden;
      background-repeat: no-repeat;
      
  }
@@ -309,11 +341,24 @@ background-color: black;
  }
 
  .contact-details{
+    width: 80%;
+    height:100%;
+    padding-top: 15px;
+    font-size: 20px;
+    background-color: #83677b;
+    margin-bottom: 10%;
+    position: unset;
+    
+    
+ }
 
+ .contact-details h3{
+     padding-bottom: 15px;
  }
 
  iframe{
      margin-bottom: 20px;
+     width: 90%;
  }
 
  #contact-text-area{
@@ -343,11 +388,11 @@ background-color: black;
     width: 9%;
 }
 #contact-submit:hover{
-    background-color: #AAA0A0;
+    background-color: #ADADAD;
 }
 
 #footer-submit:hover{
-    background-color: #AAA0A0;  
+    background-color: #adadad;  
 }
 
 
@@ -359,7 +404,7 @@ background-color: black;
     line-height: 0;
     column-count: 2;
     column-gap: 0;
-    background-color: rgba(76, 66, 66, 0.5);
+    background-color:#ADADAD;
     
 }
 
@@ -370,6 +415,7 @@ background-color: black;
 .products-text h2{
     margin-top: 15px;
     margin-bottom: 45px;
+    font-size: 40px;
 }
 
 .products-text h3{
@@ -381,6 +427,8 @@ background-color: black;
     display: block;
     padding: 0;
     height: 400px;
+    margin-right: 15px;
+    margin-left: 15px;
     margin-bottom: 30px;
     border: solid black 2px;
 }
@@ -407,14 +455,6 @@ background-color: black;
     margin-bottom: 3px;
 }
 
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x:visible; 
-}
 
 #gallery-section{
     width: 100%;
@@ -456,6 +496,13 @@ html,body
     #contact-submit{
         width: 25%;
     } 
+
+    html,body{
+        margin-left: 0;
+        margin-right: 0;
+        padding: 0;
+    }
+    
 }
 
 
